[gd_scene load_steps=3 format=3 uid="uid://dqaal8kx110m7"]

[ext_resource type="LabelSettings" uid="uid://cdha5gcswv4rj" path="res://assets/fonts/style_smalltitle.tres" id="1_2sbtg"]
[ext_resource type="Script" path="res://scenes/gui/components/dialog/outpost_list.gd" id="1_qsuyq"]

[node name="HBoxContainer2" type="HBoxContainer"]
offset_right = 640.0
offset_bottom = 375.0
theme_override_constants/separation = 16
script = ExtResource("1_qsuyq")

[node name="OutpostList" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Header" type="HBoxContainer" parent="OutpostList"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2

[node name="Title" type="Label" parent="OutpostList/Header"]
layout_mode = 2
size_flags_horizontal = 6
text = "营地"
label_settings = ExtResource("1_2sbtg")

[node name="ID" type="Label" parent="OutpostList/Header"]
layout_mode = 2
size_flags_horizontal = 6
text = "ID"
label_settings = ExtResource("1_2sbtg")

[node name="OwnerName" type="Label" parent="OutpostList/Header"]
layout_mode = 2
size_flags_horizontal = 6
text = "所属方"
label_settings = ExtResource("1_2sbtg")

[node name="Location" type="Label" parent="OutpostList/Header"]
layout_mode = 2
size_flags_horizontal = 6
text = "位置"
label_settings = ExtResource("1_2sbtg")

[node name="Distance" type="Label" parent="OutpostList/Header"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
text = "距离"
label_settings = ExtResource("1_2sbtg")

[node name="HSeparator" type="HSeparator" parent="OutpostList"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="OutpostList"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="OutpostListContainer" type="VBoxContainer" parent="OutpostList/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="OutpostItem" parent="OutpostList/ScrollContainer/OutpostListContainer" instance_placeholder="res://scenes/gui/components/dialog/outpost_item.tscn"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OutpostList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GoTo" type="Button" parent="OutpostList/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = " 前往 "

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="PH" type="Label" parent="VBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
text = "选择一个项目以预览"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2

[connection signal="pressed" from="OutpostList/HBoxContainer/GoTo" to="." method="_on_go_to_pressed"]
